--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: 张梓源
-description: 光荣在于平淡，艰巨在于漫长
+title: Ziyuan Zhang
+description: Practice makes perfect
 url: bobothebest.github.io
 avatar: /avatar.jpeg
 paginate: 5
